@@ -1,3 +1,9 @@
+2011-03-06  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	Backport from mainline
+	PR libgfortran/47878
+	* gfortran.dg/pr47878.f90: New test.
+
 2011-02-19  Alexandre Oliva  <aoliva@redhat.com>
 
 	PR tree-optimization/46620
